Correcciones en ciudad.tpl.html, ciudad.ctrl.js y ciudadStyle.css

--- a/punajut-web/src/main/webapp/resources/css/ciudadStyle.css
+++ b/punajut-web/src/main/webapp/resources/css/ciudadStyle.css
@@ -32,3 +32,13 @@ footer {
     padding: 20px;
 }
 
+#separador {
+    text-align: center;
+    color: white;
+}
+
+#headingCiudad {
+    text-align: center;
+}
+
+
