Correcciones en PaginaDeInicio.tpl.html y en stylish-portfolio.css

--- a/punajut-web/src/main/webapp/resources/css/stylish-portfolio.css
+++ b/punajut-web/src/main/webapp/resources/css/stylish-portfolio.css
@@ -20,11 +20,12 @@ body {
     display: table-cell;
     text-align: center;
     vertical-align: middle;
+    height: 500px;
 }
 
 .text-vertical-center h1 {
     margin: 0;
-    padding: 0;
+    padding: 20px;
     font-size: 4.5em;
     font-weight: 700;
 }
